<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="#ffffff">

    <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/spidlogo"
            android:adjustViewBounds="true"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:contentDescription="@string/SPiDLogo"/>

    <TextView
            android:id="@+id/userTextView"
            android:text="@string/welcomeUnknownUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/imageView"
            android:textColor="#000000"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

    <TextView
            android:id="@+id/tokenExpiresTextView"
            android:text="@string/tokenExpires"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/userTextView"
            android:textColor="#000000"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

    <TextView
            android:id="@+id/oneTimeCodeTextView"
            android:text="@string/oneTimeCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/tokenExpiresTextView"
            android:textColor="#000000"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

    <Button
            android:id="@+id/refreshTokenButton"
            android:text="@string/RefreshToken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/oneTimeCodeTextView"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:minHeight="2dp"
            android:maxHeight="2dp"/>

    <Button
            android:id="@+id/oneTimeCodeButton"
            android:text="@string/getOneTimeCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/refreshTokenButton"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:minHeight="10dp"
            android:maxHeight="10dp"/>

    <Button
            android:id="@+id/logoutButton"
            android:text="@string/logout"
            android:singleLine="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/oneTimeCodeButton"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:minHeight="10dp"
            android:maxHeight="10dp"/>
</RelativeLayout>